// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-fbyfCU gKjRVk sc-GEbAx hRVwCC"
      color="#fff"
    >
      <div
        class="sc-jQrDum dYtLAS"
      >
        10
        %
      </div>
      <div
        class="sc-jUosCB gIYsDq"
        style="width: 10%;"
      >
        <div
          class="sc-fvxzrP gKQGZL"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-fbyfCU gKjRVk sc-GEbAx hRVwCC"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-jQrDum dYtLAS"
      >
        10
        %
      </div>
      <div
        class="sc-jUosCB iVvZrE"
        style="width: 10%;"
      >
        <div
          class="sc-fvxzrP gKQGZL"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-fbyfCU hVXTWV sc-GEbAx hRVwCC"
      color="#fff"
    >
      <div
        class="sc-jQrDum dYtLAS"
      >
        10
        %
      </div>
      <div
        class="sc-jUosCB gIYsDq"
        style="width: 10%;"
      >
        <div
          class="sc-fvxzrP gKQGZL"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
